--- a/make.conf
+++ b/make.conf
@@ -17,7 +17,7 @@ CXXFLAGS="${CFLAGS}"
 # Compilation options
 ACCEPT_LICENSE="*"
 USE_VMS="X  gtk2 gtk  kde -gnome xinerama  khtmlhandbook xulrunner policykit consolekit"
-USE_SEC="acl quotas kerberos ldap sasl slp -smbkrb5passwd"
+USE_SEC="acl quotas kerberos ldap sasl slp -smbkrb5passwd xattr python"
 USE_SYS="gstreamer acpi alsa cups nptl nptlonly perl posix unicode zlib xprint pulseaudio"
 USE_DB="mysql postgres kdeprefix"
 USE_NTW="cups mysql network samba"
