--- a/make.conf
+++ b/make.conf
@@ -1,3 +1,4 @@
+PORTDIR=/usr/portage 
 #minimal
 #normal
 MAKEOPTS="-j4"
@@ -20,8 +21,9 @@ USE_VMS="X  gtk2 gtk  kde -gnome xinerama  khtmlhandbook xulrunner policykit con
 USE_SEC="acl quotas kerberos ldap sasl slp -smbkrb5passwd xattr python"
 USE_SYS="gstreamer acpi alsa cups nptl nptlonly perl posix unicode zlib xprint pulseaudio"
 USE_DB="mysql postgres kdeprefix"
+USE_ZEROCONF="mysql postgres kdeprefix avahi zeroconf"
 USE_NTW="cups mysql network samba"
-USE="$USE $USE_VMS $USE_SEC $USE_SYS $USE_NTW $USE_DB"
+USE="$USE $USE_VMS $USE_SEC $USE_SYS $USE_NTW $USE_DB $USE_ZEROCONF"
 INPUT_DEVICES="keyboard mouse evdev"
 VIDEO_CARDS="vesa i945 nvidia savage i810 nv intel nouveau ati fglrx radeon virtualbox"
 VIDEO_CARDS="vesa i945 nvidia savage i810 nv intel nouveau radeon virtualbox"
